# CXLSSDEval

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LIVE_MIGRATION.md  README_DAX.md  arm_toolchain.cmake  build_migration.sh  test_simple_dax.cpp
driver/: Makefile  QUICKSTART.txt  README.md  README_BAR_RW.md  bar_rw_driver.c  diagnose.sh  install.sh  modules.order  nvme_custom_driver.c  nvme_simple_driver.c  nvme_test_app.c  pcie-ssd-overlay.dts  pcie_ssd.conf  pcie_ssd.h  pcie_ssd_driver.c  test_bar_rw.sh  test_pcie_ssd.c
include/: cxl_device_impl.hpp  cxl_logger.hpp  cxl_mvvm_adapter.hpp  cxl_mwait.hpp  cxl_ssd_common.hpp  wasm_scheduler.hpp
scripts/: CLAUDE.md  agents.md  analyze_byte_addressable.py  byte_samsung.txt  cleanup_environment.sh  config.yaml  config_path.yaml  csd_log.txt  data.csv  deploy_rocksdb.sh  example_paper.md  generate_cxl_data.py  generate_paper_figures.py  generate_report.py  log.txt  monitor_pmr.py  nohup.out  paper_outline.md  parse_results.py  plot_access_distribution.py  plot_access_pattern.py  plot_all_figures.py  plot_all_figures_updated.py  plot_blocksize.py  plot_byte_addressable.py  plot_cmb_bandwidth.py  plot_compression_comparison.py  plot_endurance.py  plot_pmr_latency_cdf.py  plot_qd_scalability.py  plot_rwmix.py  plot_thermal_throttling.py  plot_utils.py  plot_windows.py  quick_test.sh  run_all_tests.sh  run_byte_addressable_only.sh  temp_cxl_byte_addressable.txt  test_byte_addressable.sh  test_dax_fio.sh  (+7 more)
scripts/.claude/: settings.local.json
scripts/cxl_byte_addresable_result/: bs_1024_write.json  bs_128_write.json  bs_16_write.json  bs_2048_write.json  bs_256_write.json  bs_32_write.json  bs_4096_write.json  bs_512_write.json  bs_64_write.json  bs_8_write.json  byte_addressable_report.txt  byte_addressable_summary.csv
scripts/cxl_byte_addressable_result/: bs_128_write.json  bs_16_write.json  bs_1k_write.json  bs_256_write.json  bs_2k_write.json  bs_32_write.json  bs_4k_write.json  bs_512_write.json  bs_64_write.json  bs_8_write.json  cxl_byte_addressable_result.csv  cxl_byte_addressable_summary.csv
scripts/cxl_thermal_throttling/: thermal_data.csv
scripts/fio_jobs/: access_pattern.fio  blocksize_test.fio  distribution.fio  endurance_test.fio  qd_thread_test.fio  rwmix_test.fio
scripts/fio_scripts/: common.sh  filesystem_test.sh  raw_device_test.sh  rocksdb_test.sh  run_fio_job.sh  test_access_pattern.sh  test_blocksize.sh  test_byte_addressable.sh  test_distribution.sh  test_endurance.sh  test_qd_thread.sh  test_raw_byte_addressable.sh  test_rwmix.sh  test_thermal_throttling.sh
scripts/hot_scalaflux/blocksize/: bs_16m_read.json  bs_1k_read.json  bs_1m_read.json  bs_256k_read.json  bs_256k_write.json  bs_4k_write.json  bs_4m_read.json  bs_512_read.json
scripts/hot_scalaflux/distribution/: dist_normal_read.json  dist_pareto_write.json  dist_uniform_read.json
scripts/hot_scalaflux/qd_thread/: jobs16_read.json  jobs1_read.json  jobs2_write.json  jobs32_read.json  jobs8_read.json  jobs8_write.json
scripts/hot_scalaflux/rwmix/: rwmix_r0_w100.json  rwmix_r25_w75.json  rwmix_r50_w50.json  rwmix_r75_w25.json
scripts/random_qd_thread_kioxia_raw/: log.txt
scripts/random_qd_thread_kioxia_raw/qd_thread/: qd128_jobs16_read.json  qd128_jobs16_write.json  qd128_jobs1_read.json  qd128_jobs1_write.json  qd128_jobs2_read.json  qd128_jobs2_write.json  qd128_jobs32_read.json  qd128_jobs4_read.json  qd128_jobs4_write.json  qd128_jobs8_read.json  qd128_jobs8_write.json  qd16_jobs16_read.json  qd16_jobs16_write.json  qd16_jobs1_read.json  qd16_jobs1_write.json  qd16_jobs2_read.json  qd16_jobs2_write.json  qd16_jobs32_read.json  qd16_jobs32_write.json  qd16_jobs4_read.json  qd16_jobs4_write.json  qd16_jobs8_read.json  qd16_jobs8_write.json  qd1_jobs16_read.json  qd1_jobs16_write.json  qd1_jobs1_read.json  qd1_jobs1_write.json  qd1_jobs2_read.json  qd1_jobs2_write.json  (+66 more)
scripts/samsung_byte_addressable_result/: bs_128_write.json  bs_16_write.json  bs_1k_write.json  bs_256_write.json  bs_2k_write.json  bs_32_write.json  bs_4k_write.json  bs_512_write.json  bs_64_write.json  bs_8_write.json  byte_addressable_report.txt  samsung_byte_addressable_result.csv  samsung_byte_addressable_summary.csv
scripts/scala_byte_addresable_result/: bs_128_write.json  bs_16_write.json  bs_1k_write.json  bs_256_write.json  bs_2k_write.json  bs_32_write.json  bs_4k_write.json  bs_512_write.json  bs_64_write.json  bs_8_write.json  byte_addressable_report.txt  scala_byte_addressable_summary.csv
src/: cxl_mvvm_adapter.cpp  cxl_mwait.cpp  cxl_mwait_dax.cpp  cxl_ssd_common.cpp  fio_intercept.cpp  iouring_intercept.cpp  wasm_scheduler.cpp
tests/: benchmark.cpp  example_basic.cpp  example_pmr_cache.cpp  test_cxl_open_methods.cpp  test_mwait.cpp  test_mwait_dax.cpp
(+294 files in other folders)
